# HDLStudio

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  and_gate.v  docker-compose.yml  installer.iss  main.py  pyproject.toml  requirements.txt  tb_and_gate.v
core/: build_system.py  hdl_parser.py  hierarchy_parser.py  hover_data.py  keyword_docs.py  pnr_system.py  project.py  schematic_viewer.py  template_manager.py  testbench_generator.py  vcd_parser.py  wave_viewer.py
docs/: about.html  extensions.html  features.html  index.html  install.html  usage.html
docs/assets/css/: style.css
docs/assets/js/: main.js
examples/: bcd_to_7seg.v  counter_4bit.v  d_flip_flop.v  dyn_inverter.v  full_adder.v  mux_4to1.v  ring_oscillator.v  saturation.v  tb_bcd_to_7seg.v  tb_counter_4bit.v  tb_d_flip_flop.v  tb_full_adder.v  tb_mux_4to1.v  tb_ring_oscillator.v
examples/and_gate/: tb_and_gate.v
extensions/: api.py  extension_base.py  manager.py
extensions/sample_hello/: main.py  manifest.json
scripts/: boolector.cmd
themes/: dark.py  light.py  theme_manager.py
ui/: actions.py  activity_bar.py  debug_dialog.py  editor_tab.py  editor_tabs.py  file_explorer.py  find_replace.py  main_window.py  pnr_dialog.py  settings_dialog.py  styles.py  terminal_dock.py  toolbar.py
ui/docks/: bottom_panel.py  debug_dock.py  file_explorer_dock.py  git_dock.py  hierarchy_dock.py  signal_dock.py  template_dock.py  terminal_dock.py
ui/panels/: status_bar.py
widgets/: code_editor.py  lexers.py  signal_tree.py  terminal_widget.py
