[project]
name = "hdlstudio"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "pyinstaller==6.20.0",
    "pyqt6==6.11.0",
    "pyqt6-qscintilla==2.14.1",
    "pyqt6-sip>=13.11.1",
    "yowasp-nextpnr-ecp5==0.10.0.75.post792.dev0",
    "yowasp-nextpnr-gowin==0.7.0.177.post611",
    "yowasp-nextpnr-himbaechel-gatemate==0.10.0.75.post792.dev0",
    "yowasp-nextpnr-ice40==0.10.0.75.post792.dev0",
    "yowasp-nextpnr-machxo2==0.10.0.75.post792.dev0",
    "yowasp-nextpnr-nexus==0.10.0.75.post792.dev0",
    "yowasp-yosys==0.65.0.0.post1154",
]
